upp:Добавление правельнный эндпоинта для получения задач пользователя
