# openapi/users-only.yaml
@@ -81,6 +81,25 @@ paths:
       responses:
         '204':
           description: No Content
+  /users/{id}/tasks:
+    get:
+      operationId: getUsersIdTasks
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 
 components:
   schemas:
@@ -114,3 +133,22 @@ components:
           format: email
         password:
           type: string
+    Task:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        user_id:
+          type: integer
+          format: uint
+        task:
+          type: string
+        is_done:
+          type: boolean
+        created_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
